--- a/integrated-scouting-apps/src/public/stylesheets/buttons.css
+++ b/integrated-scouting-apps/src/public/stylesheets/buttons.css
@@ -11,3 +11,16 @@
     margin: 2% 1%;
     cursor: pointer;
 }
+.backbutton {
+    background-color: #999999ff;
+    color: #000000;
+    border: 2px solid black;
+    border-radius: 15px;
+    width: 25%;
+    height: 10%;
+    text-align: center;
+    font-size: 36px;
+    font-family: Audiowide;
+    margin: 2% 1%;
+    cursor: pointer;
+}
