--- a/integrated-scouting-apps/src/public/stylesheets/input.css
+++ b/integrated-scouting-apps/src/public/stylesheets/input.css
@@ -24,18 +24,33 @@
     margin: 2% 1%;
     cursor: pointer;
 }
+.submitbutton {
+    color: #000000;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 25%;
+    height: 5%;
+    text-align: center;
+    font-size: 24px;
+    font-family: Audiowide;
+    margin: auto;
+    align-self: center;
+    cursor: pointer;
+}
 .matchlevel {
     background-color: #32a7dc;
     color: #000000;
     border: 2px solid black;
-    border-radius: 15px;
     width: 25%;
     height: 10%;
     text-align: center;
     font-size: 36px;
     font-family: Audiowide;
-    margin: 2% 1%;
     cursor: pointer;
+    max-width: 25%;
+}
+.ant-select-selection {
+    background-color: #000000;
 }
 .input {
     min-width: 100px;
