--- a/integrated-scouting-apps/src/public/stylesheets/input.css
+++ b/integrated-scouting-apps/src/public/stylesheets/input.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Audiowide;
+    src: url('../fonts/Audiowide-Regular.woff') format('woff');
+}
+
 .mainbutton {
     background-color: #32a7dc;
     color: #000000;
@@ -52,14 +57,41 @@
 .input {
     min-width: 100px;
     width: 100px;
+    font-family: Audiowide;
+    text-align: center;
 }
-.checkbox {    
+.checkbox {
     .ant-checkbox .ant-checkbox-inner {
         background-color: #999999;
         border-color: #000000;
-      } 
+        width: 200px;
+        height: 25px;
+        border-radius: 5px;
+    };
     .ant-checkbox-checked .ant-checkbox-inner {
         background-color: #61f761;
         border-color: #000000;
-    }
+        width: 200px;
+        height: 25px;
+        border-radius: 5px;
+    };
+}
+.submit {
+    border: 1px solid black;
+    margin-bottom: 50px;
+    width: 50%;
+    text-align: center;
+    cursor: pointer;
+    align-self: center;
+    font-family: Audiowide;
+}
+.textarea {
+    resize: none;
+    height: 100px;
+    margin-bottom: 25px;
+    font-family: Audiowide;
+}
+.pathbutton {
+    width: fit-content;
+    font-family: Audiowide;
 }
