--- a/integrated-scouting-apps/src/public/stylesheets/style.css
+++ b/integrated-scouting-apps/src/public/stylesheets/style.css
@@ -11,13 +11,16 @@
 }
 body {
     margin: 0;
+    font-family: Audiowide;
 }
 h1 {
     margin: 0;
-    font-family: Audiowide;
     font-size: 44px;
     color: #ffffff;
     display: inline-block;
+}
+h2 {
+    font-family: Audiowide;
 }
 .banner {
     background-color: #32a7dc;
@@ -29,13 +32,9 @@ h1 {
     background-color: #ffffff;
     color: #000000;
     text-align: center;
-    height: 100vh;
+    font-family: Audiowide;
 }
 .matchbody {
-    padding-left: 25%;
-    padding-right: 25%;
-}
-.tabs {
-    text-align: right;
-    padding-right: 50px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
